--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ subprojects {
         imports {
             // 7
             mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
         }
     }
 }
