--- a/configserver/.gitignore
+++ b/configserver/.gitignore
@@ -1,5 +1,3 @@
-.gradle
-/build/
 !gradle/wrapper/gradle-wrapper.jar
 
 ### STS ###
@@ -23,3 +21,10 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+
+#Gradle
+.gradletasknamecache
+.gradle/
+build/
+bin/
+out/
