--- a/sentenceservice/build.gradle
+++ b/sentenceservice/build.gradle
@@ -33,11 +33,18 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-feign')
 	compile('org.springframework.cloud:spring-cloud-starter-ribbon')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.keycloak:keycloak-spring-boot-starter')
+	compile('org.springframework.boot:spring-boot-starter-security')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		mavenBom "org.keycloak.bom:keycloak-adapter-bom:3.1.0.Final"
 	}
+}
+
+bootRun {
+
 }
