--- a/sentenceservice/build.gradle
+++ b/sentenceservice/build.gradle
@@ -4,6 +4,7 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+		mavenLocal()
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -19,6 +20,7 @@ sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+	mavenLocal()
 }
 
 
@@ -35,6 +37,9 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.keycloak:keycloak-spring-boot-starter')
 	compile('org.springframework.boot:spring-boot-starter-security')
+	compile('com.bootcamptech:error:1.0.1')
+	compile('org.apache.commons:commons-io:1.3.2')
+	compile('com.google.code.gson:gson:2.8.1')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
@@ -46,5 +51,5 @@ dependencyManagement {
 }
 
 bootRun {
-
+	systemProperties = System.properties
 }
